fixed button/carousel overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,15 +40,6 @@ div.absolute {
   }
 }
 
-.buttonContainer {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  height: 100%;
-}
-
 .buttonBack {
   right: 0px;
 }
@@ -57,6 +48,7 @@ div.absolute {
 .buttonNext {
   width: 100px;
   padding: 0;
+  top: 0;
   position: absolute;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
